# pixla

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  config.h.in
game/: frequency_table.h  game.c  screen.c  screen.h  sound.c  sound.h  synth.c  synth.h
src/: audiorenderer.c  audiorenderer.h  defaultsettings.c  defaultsettings.h  diskrenderer.c  diskrenderer.h  editor.h  file_selector.c  file_selector.h  font.c  font.h  frequency_table.c  frequency_table.h  inputfield.c  inputfield.h  instrument.c  instrument.h  keyhandler.c  keyhandler.h  note.h  panelmode.h  pattern.c  pattern.h  persist.c  persist.h  pixla.c  player.c  player.h  screen.c  screen.h  settings_component.c  settings_component.h  song.c  song.h  songsuffix.h  strutils.c  strutils.h  synth.c  synth.h  track.c  (+4 more)
